--- a/teachers/pledge/index.html
+++ b/teachers/pledge/index.html
@@ -1,1 +1,39 @@
 
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Join the Founding Teacher Alliance — TichaAfrica</title>
+  <link rel="icon" href="/assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+</head>
+<body data-page="teachers-pledge">
+
+  <!-- HEADER -->
+  <div data-include="/partials/header.html"></div>
+
+  <!-- HERO / PLEDGE -->
+  <section class="section section-light container">
+    <h1>Become a Founding Teacher</h1>
+    <p>By joining the Founding Teacher Alliance, you co-create Africa’s AI-powered learning future. Your expertise, your classroom, your wisdom — at the heart of the movement.</p>
+    
+    <div class="progress-indicator">
+      <span class="step active">1</span>
+      <span class="step">2</span>
+      <span class="step">3</span>
+    </div>
+
+    <div class="pledge-box">
+      <p class="pledge-copy">
+        I pledge to share my classroom insights, guide AI in education responsibly, and support fellow teachers to shape Africa’s learning future. My voice, my students, my continent — I lead change.
+      </p>
+      <a href="/teachers/insight/" class="btn btn-primary">I Accept the Pledge</a>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <div data-include="/partials/footer.html"></div>
+  <script src="/assets/js/include.js"></script>
+</body>
+</html>
