--- a/index.html
+++ b/index.html
@@ -2,37 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>TichaAfrica</title>
-
-  <!-- FAVICONS -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
-
-<div data-include="/partials/header.html"></div>
-
-<main class="container">
-  <section>
-    <h1>A teacher-led movement shaping Africa’s learning future</h1>
-
-    <p>
-      TichaAfrica brings together African teachers to co-design how technology
-      serves classrooms, students, and communities — starting with lived
-      classroom wisdom.
-    </p>
-
-    <a href="/teachers/pledge/" class="btn btn-primary">
-      Join the Founding Teacher Alliance
-    </a>
-  </section>
-</main>
-
-<div data-include="/partials/footer.html"></div>
-<script src="/assets/js/include.js"></script>
+  <div class="wrap">
+    <div class="card">
+      <h1>A teacher-led movement shaping Africa’s learning future</h1>
+      <p>
+        TichaAfrica brings together African teachers to co-design how technology
+        serves classrooms, students, and communities — starting with lived
+        classroom wisdom.
+      </p>
+      <a href="/teachers/pledge/" class="btn btn-primary">
+        Join the Founding Teacher Alliance
+      </a>
+    </div>
+  </div>
 </body>
 </html>
