--- a/index.html
+++ b/index.html
@@ -2,24 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>TichaAfrica</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TichaAfrica — Teach Smart, Lead Change</title>
+  <meta name="description" content="African teachers creating AI tools our learners deserve. Join the first 10,000.">
+  <meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa">
+  <meta property="og:description" content="African teachers creating the tools our learners deserve.">
+  <meta property="og:image" content="/assets/images/og-image.png">
+  <link rel="icon" href="/assets/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+  <style>
+    body{margin:0;font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;height:100vh;display:flex;flex-direction:column;}
+    .hero{flex:1;display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;padding:0 20px;}
+    .logo img{height:clamp(80px,20vw,120px);margin-bottom:32px;}
+    h1{font-size:clamp(2.8rem,8vw,5rem);font-weight:900;margin:0 0 24px;line-height:1.1;background:linear-gradient(135deg,#ffd700,#ff6b35);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
+    p{font-size:clamp(1.1rem,4vw,1.4rem);max-width:680px;margin:0 auto 48px;color:#e2e8f0;line-height:1.5;}
+    .btn{display:inline-block;padding:20px 60px;background:#ffd700;color:#0f0f23;font-weight:700;font-size:clamp(1.2rem,5vw,1.5rem);border-radius:999px;text-decoration:none;box-shadow:0 12px 32px rgba(255,215,0,0.4);transition:all .3s;}
+    .btn:hover{transform:translateY(-6px);box-shadow:0 24px 64px rgba(255,215,0,0.5);}
+    footer{padding:40px 20px;text-align:center;font-size:0.95rem;color:#94a3b8;}
+  </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="card">
-      <h1>A teacher-led movement shaping Africa’s learning future</h1>
-      <p>
-        TichaAfrica brings together African teachers to co-design how technology
-        serves classrooms, students, and communities — starting with lived
-        classroom wisdom.
-      </p>
-      <a href="/teachers/pledge/" class="btn btn-primary">
-        Join the Founding Teacher Alliance
-      </a>
+  <div class="hero">
+    <div class="logo">
+      <img src="/assets/images/logo1.png" alt="TichaAfrica">
     </div>
+    <h1>Teach Smart, Lead Change</h1>
+    <p>African teachers rising — creating the AI tools our learners deserve, before foreign systems decide for us.</p>
+    <a href="/alliance/" class="btn">Join the Founding Teacher Alliance</a>
   </div>
+
+  <footer>
+    © 2025 TichaAfrica • Teacher-led. Africa-first AI education.
+  </footer>
 </body>
 </html>
