--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TichaAfrica — Teach Smart, Lead Change</title>
-  <meta name="description" content="African teachers creating AI tools our learners deserve. Join the first 10,000.">
+  <meta name="description" content="Teacher-led Pan-African movement equipping educators with AI and digital skills.">
   <meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa">
   <meta property="og:description" content="African teachers creating the tools our learners deserve.">
   <meta property="og:image" content="/assets/images/og-image.png">
@@ -24,7 +24,7 @@
 <body>
   <div class="hero">
     <div class="logo">
-      <img src="/assets/images/logo1.png" alt="TichaAfrica">
+      <img src="/assets/images/Logo1.png" alt="TichaAfrica">
     </div>
     <h1>Teach Smart, Lead Change</h1>
     <p>African teachers rising — creating the AI tools our learners deserve, before foreign systems decide for us.</p>
