--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main>
     <div>
       <div class="logo">
-        <img src="/assets/images/Logo1.png" alt="TichaAfrica">
+        <img src="/assets/images/Logo1.jpg" alt="TichaAfrica">
       </div>
       <h1>A teacher-led movement shaping Africa’s learning future</h1>
       <p>
