--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <style>
-    *{margin:0;padding:0;box-sizing:border-box;}
-    body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;min-height:100vh;display:flex;flex-direction:column;}
-    main{flex:1;display:flex;align-items:center;justify-content:center;padding:20px;text-align:center;}
-    .logo img{height:clamp(80px,20vw,140px);margin-bottom:32px;}
-    h1{font-size:clamp(2.5rem,8vw,4.5rem);font-weight:900;line-height:1.1;margin-bottom:24px;background:linear-gradient(135deg,#ffd700,#ff6b35);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
-    p{font-size:clamp(1.1rem,4vw,1.35rem);max-width:720px;margin:0 auto 48px;line-height:1.6;color:#e2e8f0;}
-    .btn{display:inline-block;padding:clamp(16px,4vw,20px) clamp(32px,8vw,60px);background:#ffd700;color:#0f0f23;font-weight:700;font-size:clamp(1.2rem,5vw,1.5rem);border-radius:999px;text-decoration:none;box-shadow:0 12px 32px rgba(255,215,0,0.4);transition:all .3s;}
-    .btn:hover{transform:translateY(-6px);box-shadow:0 24px 64px rgba(255,215,0,0.5);}
-    footer{padding:40px 20px;text-align:center;font-size:0.95rem;color:#94a3b8;}
-  </style>
+  *{margin:0;padding:0;box-sizing:border-box;}
+  body{font-family:'Inter',sans-serif;background:#f8f9fc;color:#0f172a;min-height:100vh;display:flex;flex-direction:column;}
+  main{flex:1;display:flex;align-items:center;justify-content:center;padding:20px;text-align:center;background:#f8f9fc;}
+  .logo img{height:clamp(80px,20vw,140px);margin-bottom:32px;}
+  h1{font-size:clamp(2.8rem,8vw,5rem);font-weight:900;line-height:1.1;margin-bottom:24px;background:linear-gradient(135deg,#0d5c63,#ca8a04);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
+  p{font-size:clamp(1.1rem,4vw,1.4rem);max-width:680px;margin:0 auto 48px;line-height:1.6;color:#475569;}
+  .btn{display:inline-block;padding:20px 60px;background:#0d5c63;color:#fff;font-weight:700;font-size:clamp(1.2rem,5vw,1.5rem);border-radius:999px;text-decoration:none;box-shadow:0 12px 32px rgba(13,92,99,0.2);transition:all .3s;}
+  .btn:hover{transform:translateY(-6px);box-shadow:0 24px 64px rgba(13,92,99,0.3);}
+  footer{padding:40px 20px;text-align:center;font-size:0.95rem;color:#64748b;background:#f8f9fc;}
+</style>
 </head>
 <body>
   <main>
