--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         serves classrooms, students, and communities — starting with lived
         classroom wisdom.
       </p>
+      <p class="cta-text">
+            If you're ready to help shape the future of learning,<br>
+            add your voice by becoming a founding teacher.
+      </p>
       <a href="/alliance/intro/" class="btn">
         Join the Founding Teacher Alliance
       </a>
