--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TichaAfrica — Teach Smart, Lead Change</title>
-  <meta name="description" content="Teacher-led movement co-designing AI for African classrooms — by teachers, for teachers.">
+  <meta name="description" content="Teacher-led Movement Co-designing AI for African Classrooms — by Teachers, for Teachers.">
   <!-- Open Graph / WhatsApp sharing -->
   <meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa">
   <meta property="og:description" content="African teachers co-designing how technology serves our classrooms and learners.">
@@ -30,9 +30,9 @@
       <div class="logo">
         <img src="/assets/images/Logo1.jpg" alt="TichaAfrica">
       </div>
-      <h1>A teacher-led movement shaping Africa’s learning future</h1>
+      <h1>A Teacher-led Movement Shaping Africa’s Learning Future</h1>
       <p>
-        TichaAfrica brings together African teachers to co-design how technology
+        <strong>TichaAfrica</strong> brings together African teachers to co-design how technology
         serves classrooms, students, and communities — starting with lived
         classroom wisdom.
       </p>
