--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -4,64 +4,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Founding Teacher Pledge — TichaAfrica</title>
-  <meta name="description" content="Take the Founding Teacher Pledge and help shape Africa’s learning future.">
-
+  <meta name="description" content="Affirm your place in shaping Africa’s learning future. Your voice starts here.">
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
-
   <style>
     *{margin:0;padding:0;box-sizing:border-box;}
-    body{
-      font-family:'Inter',sans-serif;
-      background:#f8f9fc;
-      color:#0f172a;
-      min-height:100vh;
-      display:flex;
-      flex-direction:column;
-    }
-    main{
-      flex:1;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:24px;
-      text-align:center;
-    }
-    .container{
-      max-width:720px;
-      width:100%;
-    }
-    .step{
-      font-size:0.9rem;
-      font-weight:600;
-      color:#64748b;
-      margin-bottom:20px;
-    }
-    h1{
-      font-size:clamp(2.2rem,7vw,3.4rem);
-      font-weight:900;
-      line-height:1.15;
-      margin-bottom:24px;
-    }
-    p{
-      font-size:1.15rem;
-      line-height:1.7;
-      color:#475569;
-      margin-bottom:28px;
-    }
+    body{font-family:'Inter',sans-serif;background:#f8f9fc;color:#0f172a;min-height:100vh;display:flex;flex-direction:column;}
+    main{flex:1;display:flex;align-items:center;justify-content:center;padding:24px;text-align:center;}
+    .container{max-width:720px;width:100%;}
+    .step{font-size:0.9rem;font-weight:600;color:#64748b;margin-bottom:20px;}
+    h1{font-size:clamp(2.2rem,7vw,3.4rem);font-weight:900;line-height:1.15;margin-bottom:24px;color:#0d5c63;}
+    p{font-size:1.15rem;line-height:1.7;color:#475569;margin-bottom:28px;}
     .pledge{
       background:#ffffff;
-      padding:28px;
+      padding:32px;
       border-radius:16px;
       box-shadow:0 10px 30px rgba(15,23,42,0.08);
       text-align:left;
       margin-bottom:40px;
+      border-left:6px solid #0d5c63;
     }
-    .pledge p{
-      font-size:1.05rem;
-      color:#0f172a;
-      margin-bottom:16px;
-    }
+    .pledge p{font-size:1.1rem;color:#0f172a;margin-bottom:20px;line-height:1.8;}
     .btn{
       display:inline-block;
       padding:18px 56px;
@@ -74,20 +37,10 @@
       box-shadow:0 14px 36px rgba(13,92,99,0.25);
       transition:all .3s ease;
     }
-    .btn:hover{
-      transform:translateY(-4px);
-      box-shadow:0 24px 56px rgba(13,92,99,0.35);
-    }
-    footer{
-      padding:32px 20px;
-      text-align:center;
-      font-size:0.9rem;
-      color:#64748b;
-      background:#f8f9fc;
-    }
+    .btn:hover{transform:translateY(-4px);box-shadow:0 24px 56px rgba(13,92,99,0.35);}
+    footer{padding:32px 20px;text-align:center;font-size:0.9rem;color:#64748b;background:#f8f9fc;}
   </style>
 </head>
-
 <body>
 
 <main>
@@ -95,24 +48,23 @@
 
     <div class="step">Step 1 of 3 — The Pledge</div>
 
-    <h1>The Founding Teacher Pledge</h1>
+    <h1>This is your moment, Teacher</h1>
 
     <div class="pledge">
       <p>
-        I commit to shaping Africa’s learning future with integrity, wisdom, and care.
+        I commit to shaping Africa’s learning future — not as a follower, but as a founder.
       </p>
       <p>
-        I will share my lived classroom experience so technology reflects our realities,
-        respects our learners, and strengthens our communities.
+        I will share the truth of my classroom so the tools we build reflect our realities, honor our languages, and lift our learners.
       </p>
       <p>
-        I stand as a founding teacher — not to follow imported solutions,
-        but to help design what truly serves Africa.
+        My voice, my experience, my wisdom — they belong here.  
+        And together, we will make sure no foreign system ever decides for us again.
       </p>
     </div>
 
     <a href="/alliance/insight/" class="btn">
-      I Take the Pledge
+      I have read and I affirm this pledge
     </a>
 
   </div>
