--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -48,17 +48,28 @@
 
     <div class="step">Step 1 of 3 — The Pledge</div>
 
-    <h1>This is your moment, Teacher</h1>
-
+    <h1>The Founding Teacher Pledge</h1>
+<div style="margin-bottom:32px;">
+  <p style="font-size:1.2rem;line-height:1.7;color:#475569;text-align:left;">
+    Teacher, thank you for showing up.<br>
+    This moment is bigger than any of us alone; but it starts with you.<br>
+    <strong>You</strong> are the one who lives the classroom every day.<br>
+    Your stories, your struggles, your victories; they’re the foundation we’ve been missing.
+  </p>
+  <p style="font-size:1.2rem;font-weight:600;color:#0d5c63;text-align:left;margin-top:24px;">
+    So take a breath. Read the pledge. And if it feels right…<br>
+    claim your place as one of Africa’s founding teachers.
+  </p>
+</div>
     <div class="pledge">
       <p>
-        I commit to shaping Africa’s learning future — not as a follower, but as a founder.
+        I commit to shaping Africa’s learning future; not as a follower, but as a founder.
       </p>
       <p>
         I will share the truth of my classroom so the tools we build reflect our realities, honor our languages, and lift our learners.
       </p>
       <p>
-        My voice, my experience, my wisdom — they belong here.  
+        My voice, my experience, my wisdom; they belong here.  
         And together, we will make sure no foreign system ever decides for us again.
       </p>
     </div>
