--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -57,7 +57,8 @@
     Your stories, your struggles, your victories; they’re the foundation we’ve been missing.
   </p>
   <p style="font-size:1.2rem;font-weight:600;color:#0d5c63;text-align:left;margin-top:24px;">
-    So take a breath. Read the pledge. And if it feels right…<br>
+    So take a breath. Read the pledge.<br> 
+    And if it feels right…<br>
     claim your place as one of Africa’s founding teachers.
   </p>
 </div>
@@ -70,6 +71,8 @@
       </p>
       <p>
         My voice, my experience, my wisdom; they belong here.  
+      </p>   
+      <p>
         And together, we will make sure no foreign system ever decides for us again.
       </p>
     </div>
