--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -52,8 +52,10 @@
 <div style="margin-bottom:32px;">
   <p style="font-size:1.2rem;line-height:1.7;color:#475569;text-align:left;">
     Teacher, thank you for showing up.<br>
-    This moment is bigger than any of us alone; but it starts with you.<br>
-    <strong>You</strong> are the one who lives the classroom every day.<br>
+    This moment is bigger than any of us alone; but it starts with you.
+  <p>
+    <strong>You</strong> are the one who lives the classroom every day.
+  <p/>
     Your stories, your struggles, your victories; they’re the foundation we’ve been missing.
   </p>
   <p style="font-size:1.2rem;font-weight:600;color:#0d5c63;text-align:left;margin-top:24px;">
@@ -67,7 +69,7 @@
         I commit to shaping Africa’s learning future; not as a follower, but as a founder.
       </p>
       <p>
-        I will share the truth of my classroom so the tools we build reflect our realities, honor our languages, and lift our learners.
+        I will share the truth of my classroom so the tools we build reflect our realities, honour our languages, and lift our learners.
       </p>
       <p>
         My voice, my experience, my wisdom; they belong here.  
