--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -54,7 +54,7 @@
     Teacher, thank you for showing up.<br>
     This moment is bigger than any of us alone; but it starts with you.
   <p>
-    <strong>You</strong> are the one who lives the classroom every day.
+    <strong>You</strong> are the one who sees the classroom, first-hand, every day.
   <p/>
     Your stories, your struggles, your victories; they’re the foundation we’ve been missing.
   </p>
