--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <h1>We are 10,000 Teachers Shaping Africa’s Learning Future</h1>
       <p>
-        Your classroom wisdom is what Africa needs right now
+        Our classroom wisdom is what Africa needs right now
       </p>
       <p>
         Foreign AI is already entering our classrooms — designed without a single African teacher in the room.  
