--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Founding Teacher Pledge — TichaAfrica</title>
-  <meta name="description" content="Affirm your place in shaping Africa’s learning future. Your voice starts here.">
+  <meta name="description" content="This is your moment to claim your place in Africa’s learning future.">
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <style>
@@ -14,14 +14,15 @@
     .container{max-width:720px;width:100%;}
     .step{font-size:0.9rem;font-weight:600;color:#64748b;margin-bottom:20px;}
     h1{font-size:clamp(2.2rem,7vw,3.4rem);font-weight:900;line-height:1.15;margin-bottom:24px;color:#0d5c63;}
-    p{font-size:1.15rem;line-height:1.7;color:#475569;margin-bottom:28px;}
+    .intro p{font-size:1.2rem;line-height:1.7;color:#475569;margin-bottom:24px;text-align:left;}
+    .intro strong{color:#0d5c63;}
     .pledge{
       background:#ffffff;
       padding:32px;
       border-radius:16px;
       box-shadow:0 10px 30px rgba(15,23,42,0.08);
       text-align:left;
-      margin-bottom:40px;
+      margin:40px 0;
       border-left:6px solid #0d5c63;
     }
     .pledge p{font-size:1.1rem;color:#0f172a;margin-bottom:20px;line-height:1.8;}
@@ -41,6 +42,7 @@
     footer{padding:32px 20px;text-align:center;font-size:0.9rem;color:#64748b;background:#f8f9fc;}
   </style>
 </head>
+
 <body>
 
 <main>
@@ -48,39 +50,38 @@
 
     <div class="step">Step 1 of 3 — The Pledge</div>
 
-    <h1>The Founding Teacher Pledge</h1>
-<div style="margin-bottom:32px;">
-  <p style="font-size:1.2rem;line-height:1.7;color:#475569;text-align:left;">
-    Teacher, thank you for showing up.<br>
-    This moment is bigger than any of us alone; but it starts with you.
-  <p>
-    <strong>You</strong> are the one who sees the classroom, first-hand, every day.
-  <p/>
-    Your stories, your struggles, your victories; they’re the foundation we’ve been missing.
-  </p>
-  <p style="font-size:1.2rem;font-weight:600;color:#0d5c63;text-align:left;margin-top:24px;">
-    So take a breath. Read the pledge.<br> 
-    And if it feels right…<br>
-    claim your place as one of Africa’s founding teachers.
-  </p>
-</div>
+    <h1>This is your moment, Teacher</h1>
+
+    <div class="intro">
+      <p>
+        Thank you for being here.<br>
+        This isn’t just another form. This is the beginning of something real.
+      </p>
+      <p>
+        You’ve carried the classroom every day — through blackouts, chalk dust, endless marking, and dreams bigger than any syllabus allows.<br>
+        <strong>Your wisdom</strong> is what we’ve been missing.
+      </p>
+      <p>
+        Read the pledge below.<br>
+        If it feels true in your chest… claim it.
+      </p>
+    </div>
+
     <div class="pledge">
       <p>
-        I commit to shaping Africa’s learning future; not as a follower, but as a founder.
+        I commit to shaping Africa’s learning future — not as a follower, but as a founder.
       </p>
       <p>
         I will share the truth of my classroom so the tools we build reflect our realities, honour our languages, and lift our learners.
       </p>
       <p>
-        My voice, my experience, my wisdom; they belong here.  
-      </p>   
-      <p>
+        My voice, my experience, my wisdom — they belong here.<br>
         And together, we will make sure no foreign system ever decides for us again.
       </p>
     </div>
 
     <a href="/alliance/insight/" class="btn">
-      I have read and I affirm this pledge
+      I have read it. I affirm this pledge.
     </a>
 
   </div>
