--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -55,11 +55,11 @@
     <div class="intro">
       <p>
         Thank you for being here.<br>
-        This isn’t just another form. This is the beginning of something real.
+        This is not a form. It is the beginning of something historical.
       </p>
       <p>
-        You’ve carried the classroom every day — through blackouts, chalk dust, endless marking, and dreams bigger than any syllabus allows.<br>
-        <strong>Your wisdom</strong> is what we’ve been missing.
+        We have carried the classroom every day; through blackouts, chalk dust, endless marking, and dreams bigger than any syllabus allows.<br>
+        <strong>Our wisdom</strong> is what has been missing at the table.
       </p>
       <p>
         Read the pledge below.<br>
