--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -50,7 +50,7 @@
 
     <div class="step">Step 1 of 3 — The Pledge</div>
 
-    <h1>This is your moment, Teacher</h1>
+    <h1>This is our moment, Teachers</h1>
 
     <div class="intro">
       <p>
