--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -69,13 +69,13 @@
 
     <div class="pledge">
       <p>
-        I commit to shaping Africa’s learning future — not as a follower, but as a founder.
+        I commit to shaping Africa’s learning future; not as a follower, but as a founder.
       </p>
       <p>
         I will share the truth of my classroom so the tools we build reflect our realities, honour our languages, and lift our learners.
       </p>
       <p>
-        My voice, my experience, my wisdom — they belong here.<br>
+        My voice, my experience, my wisdom; they belong here.<br>
         And together, we will make sure no foreign system ever decides for us again.
       </p>
     </div>
