--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -80,7 +80,7 @@
       </p>
     </div>
 
-    <a href="/alliance/insight/" class="btn">
+    <a href="/alliance/insight/index.html" class="btn">Continue to Insight →</a>
       I have read it. I affirm this pledge.
     </a>
 
