--- a/alliance/intro/index.html
+++ b/alliance/intro/index.html
@@ -80,8 +80,8 @@
       </p>
     </div>
 
-    <a href="/alliance/insight/index.html" class="btn">Continue to Insight →</a>
-      I have read it. I affirm this pledge.
+    <a href="/alliance/insight/index.html" class="btn">I have read it. I affirm this pledge. →</a>
+      
     </a>
 
   </div>
