--- a/alliance/insight/index.html
+++ b/alliance/insight/index.html
@@ -82,7 +82,7 @@
 
     <form name="teacher-insight" method="POST" data-netlify="true" action="/alliance/thank-you/">
       <input type="hidden" name="form-name" value="teacher-insight">
-
+    <input type="hidden" name="bot-field">
       <label for="insight">
         As a teacher, what’s one real challenge in your classroom today that the right tools — designed by teachers like you — could fix?
       </label>
