--- a/alliance/insight/index.html
+++ b/alliance/insight/index.html
@@ -90,7 +90,8 @@
       <textarea id="insight" name="insight" rows="6" placeholder="Be honest. Your experience matters. Write in any language." required></textarea>
 
       <button type="submit" class="btn">
-        Submit My Insight and Join
+        <a href="/alliance/data/index.html" class="btn">Submit My Insight and Join →</a>
+      
       </button>
     </form>
 
