--- a/alliance/insight/index.html
+++ b/alliance/insight/index.html
@@ -71,11 +71,11 @@
 
     <div class="intro">
       <p>
-        Teacher, you’ve lived it — the long hours, the creative workarounds, the moments when a child’s eyes light up despite everything.<br>
+        Teacher, you’ve lived it; the long hours, the creative workarounds, the moments when a child’s eyes light up despite everything.<br>
         No policy document or foreign app can replace what you know.
       </p>
       <p>
-        Right now, we’re building tools that actually serve African classrooms — and <strong>your reality</strong> is the blueprint.<br>
+        Right now, we’re building tools that actually serve African classrooms; and <strong>your reality</strong> is the blueprint.<br>
         One honest sentence from you can change how thousands teach and learn.
       </p>
     </div>
@@ -84,7 +84,7 @@
       <input type="hidden" name="form-name" value="teacher-insight">
 
       <label for="insight">
-        As a teacher, what’s one real challenge in your classroom today that the right tools — designed by teachers like you — could fix?
+        As a teacher, what’s one real challenge in your classroom today that the right tools — designed by teachers like you; could fix?
       </label>
 
       <textarea id="insight" name="insight" rows="6" placeholder="Be honest. Your experience matters. Write in any language." required></textarea>
@@ -99,7 +99,7 @@
 </main>
 
 <footer>
-  © 2025 TichaAfrica • Teach Smart. Lead Change.
+  © 2026 TichaAfrica • Teach Smart. Lead Change.
 </footer>
 
 </body>
