--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -122,7 +122,7 @@
       <input type="email" id="email" name="email" placeholder="your.email@example.com">
 
       <button type="submit" class="btn">
-        Submit & Unlock My Badge
+       <a href="/alliance/thank-you/" class="btn">Submit & Unlock My Badge →</a> 
       </button>
     </form>
 
